--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -133,10 +133,10 @@
 
                                 <div class="p-3 product-image-wrapper position-relative text-center d-flex justify-content-center align-items-center" style="height: 250px; background: #fff;">
                                     <div class="thumbnail-list position-absolute d-flex flex-column" style="left: 10px; top: 10px; opacity: 0; transition: 0.3s;">
-                                        {% for i in product.productgallery_set.all|slice:":2" %}
+                                        {% for i in product.productgallery_set.all|slice:":3" %}
                                         <img src="{{ i.image.url }}" class="img-thumbnail thumb-img mb-2" style="width: 50px; height: 50px; object-fit: cover; cursor: pointer;">
                                         {% endfor %}
-                                        <img src="{% static 'images/item/image4.jpeg' %}" class="img-thumbnail thumb-img mb-2" style="width: 50px; height: 50px; object-fit: cover; cursor: pointer;">
+                                        <!-- <img src="{% static 'images/item/image4.jpeg' %}" class="img-thumbnail thumb-img mb-2" style="width: 50px; height: 50px; object-fit: cover; cursor: pointer;"> -->
                                     </div>
 
                                     <a href="{{product.get_url}}"><img src="{{ product.image.url }}" class="main-product-img img-fluid" style="max-height: 200px; object-fit: contain;"></a>
