--- a/templates/home.html
+++ b/templates/home.html
@@ -18,11 +18,11 @@
             {% for product in products %}
             <div class="card card-product-grid flex-shrink-0" style="min-width: 250px; display: inline-block;">
                 <a href="{{ product.get_url }}" class="img-wrap">
-                    <img src="{{ product.image.url }}" alt="{{ product.product_name }}">
+                    <img  src="{{ product.image.url }}" alt="{{ product.product_name }}">
                 </a>
                 <figcaption class="info-wrap">
-                    <a href="{{ product.get_url }}" class="title fav-color">{{ product.product_name }}</a>
-                    <div class="price mt-1 fav-color">{{ currency_symbol }}{% convert_price product.price %}</div>
+                    <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
+                    <div class="price mt-1">{{ currency_symbol }}{% convert_price product.price %}</div>
                 </figcaption>
             </div>
             {% endfor %}
@@ -88,8 +88,8 @@
                     <img src="{{ product.image.url }}" alt="{{ product.product_name }}">
                 </a>
                 <figcaption class="info-wrap">
-                    <a href="{{ product.get_url }}" class="title fav-color">{{ product.product_name }}</a>
-                    <div class="price mt-1 fav-color">{{ currency_symbol }}{% convert_price product.price %}</div>
+                    <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
+                    <div class="price mt-1">{{ currency_symbol }}{% convert_price product.price %}</div>
                 </figcaption>
             </div>
             {% endfor %}
